@@ -6,6 +6,10 @@
 #ifdef HAVE_VPRINTF
 void
   gsl_test (int status, const char *test_description, ...);
+
+void
+gsl_test_rel (double result, double expected, double relative_error,
+	      const char *test_description, ...) ;
 #endif 
 
 void
